--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,10 +2,10 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/navigation_home"
-        android:title="@string/title_home"
-        />
+<!--    <item-->
+<!--        android:id="@+id/navigation_home"-->
+<!--        android:title="@string/title_home"-->
+<!--        />-->
 
     <item
         android:id="@+id/navigation_movie"
