영화 목록 해결, 로그인 회원가입 마이페이지 화면 만들기

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,6 +22,6 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.testott.ui.notifications.NotificationsFragment"
+        android:name="com.example.testott.ui.notifications.MyPageFragment"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
