--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+
     <style name="BottomNavigationTextStyle">
-        <item name="android:textSize">20dp</item></style>
+        <item name="android:textSize">20dp</item>
+    </style>
 </resources>
