--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -54,12 +54,7 @@
             android:layout_marginTop="20dp"
 
             />
-        <EditText
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:background="@color/white"
-            android:gravity="center"
-            />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -68,12 +63,7 @@
             android:textColor="@color/white"
             android:layout_marginTop="10dp"
             />
-        <EditText
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:background="@color/white"
-            android:gravity="center"
-            />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -82,18 +72,13 @@
             android:textColor="@color/white"
             android:layout_marginTop="10dp"
             />
-        <EditText
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:background="@color/white"
-            android:gravity="center"
-            />
+
 
         <Button
-            android:id="@+id/JoinSummitButton"
+            android:id="@+id/editProfileButton"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="완료"
+            android:text="프로필 수정"
             android:textSize="20dp"
             android:textColor="@color/white"
             android:layout_marginTop="20dp"
