tv 구현, ui 수정요함

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,11 +13,11 @@
         />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_tv"
         android:title="@string/title_dashboard" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_actor"
         android:title="@string/title_notifications" />
 
 </menu>
