--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -20,11 +20,40 @@
             android:layout_height="160dp"
             />
 
-        <TextView
-            android:id="@+id/item_movie_title"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Title" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="15dp">
+            <TextView
+                android:id="@+id/item_movie_title"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:text="fdsafdsfasdsfdsdsafdsafdsafd"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                />
+
+            <TextView
+                android:id="@+id/item_movie_releaseDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="release_date"
+                android:textSize="15dp"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="STREAM ____________"
+                android:textSize="15dp"
+                android:textColor="@color/black"
+                />
+
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
