--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:background="@drawable/gradient_actionbar"
             app:titleTextColor="@color/white"
             android:gravity="center"
+            android:visibility="visible"
             app:layout_constraintBaseline_toTopOf="parent"
             />
 
