--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -17,26 +17,44 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-
             >
+
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/search_view"
+                android:layout_width="330dp"
+                android:layout_height="40dp"
+                android:layout_marginVertical="10dp"
+                app:iconifiedByDefault="false"
+                app:queryHint="영화 검색"
+                android:background="@drawable/corner_button"
+                android:backgroundTint="#6094C5"
+                android:gravity="center"
+                android:layout_gravity="center"
+                />
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/linearLayout"
-                android:layout_width="match_parent"
+                android:layout_width="330dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_gravity="center"
+                >
 
                 <TextView
                     android:id="@+id/movieTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginStart="50dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:text="@string/title_movie"
                     android:textSize="25sp"
                     android:textStyle="bold"
+                    android:textColor="@color/black"
+                    app:layout_constraintEnd_toStartOf="@id/search_view"
                 />
 
                 <TextView
@@ -60,7 +78,7 @@
                 android:layout_height="match_parent"
                 android:nestedScrollingEnabled="true"
                 android:gravity="center"
-
+                android:layout_gravity="center"
                 />
 
         </LinearLayout>
