--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -6,7 +6,6 @@
     app:cardCornerRadius="15dp"
     android:layout_marginTop="20dp"
     android:layout_gravity="center_horizontal"
-
     >
 
     <LinearLayout
@@ -25,14 +24,34 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="15dp">
-            <TextView
-                android:id="@+id/item_movie_title"
-                android:layout_width="160dp"
-                android:layout_height="wrap_content"
-                android:text="fdsafdsfasdsfdsdsafdsafdsafd"
-                android:textSize="20dp"
-                android:textColor="@color/black"
-                />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/item_movie_title"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:text="fdsafdsfasdsfdsdsafdsafdsafd"
+                    android:textSize="20dp"
+                    android:textColor="@color/black"
+                    />
+
+                <ImageView
+                    android:id="@+id/star"
+                    android:src="@drawable/non_color_star"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:clipToOutline="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
             <TextView
                 android:id="@+id/item_movie_releaseDate"
