--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -20,7 +20,7 @@
             >
 
             <androidx.appcompat.widget.SearchView
-                android:id="@+id/search_view"
+                android:id="@+id/movie_search_view"
                 android:layout_width="330dp"
                 android:layout_height="40dp"
                 android:layout_marginVertical="10dp"
@@ -54,7 +54,7 @@
                     android:textSize="25sp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
-                    app:layout_constraintEnd_toStartOf="@id/search_view"
+                    app:layout_constraintEnd_toStartOf="@id/movie_search_view"
                 />
 
                 <TextView
