--- a/app/src/main/res/layout/fragment_tv.xml
+++ b/app/src/main/res/layout/fragment_tv.xml
@@ -16,26 +16,44 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-
             >
+
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/tv_search_view"
+                android:layout_width="330dp"
+                android:layout_height="40dp"
+                android:layout_marginVertical="10dp"
+                app:iconifiedByDefault="false"
+                app:queryHint="TV 검색"
+                android:background="@drawable/corner_button"
+                android:backgroundTint="#6094C5"
+                android:gravity="center"
+                android:layout_gravity="center"
+                />
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/linearLayout"
-                android:layout_width="match_parent"
+                android:layout_width="330dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_gravity="center"
+                >
 
                 <TextView
                     android:id="@+id/tvTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginStart="50dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:text="@string/title_tv"
                     android:textSize="25sp"
                     android:textStyle="bold"
+                    android:textColor="@color/black"
+                    app:layout_constraintEnd_toStartOf="@id/tv_search_view"
                 />
 
                 <TextView
@@ -59,7 +77,7 @@
                 android:layout_height="match_parent"
                 android:nestedScrollingEnabled="true"
                 android:gravity="center"
-
+                android:layout_gravity="center"
                 />
 
         </LinearLayout>
