--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -33,12 +33,13 @@
                     android:layout_width="160dp"
                     android:layout_height="wrap_content"
                     android:text="fdsafdsfasdsfdsdsafdsafdsafd"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:textColor="@color/black"
-                    />
+                    android:maxLines="1"
+                    android:ellipsize="end" />
 
                 <ImageView
-                    android:id="@+id/star"
+                    android:id="@+id/non_color_star"
                     android:src="@drawable/non_color_star"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
