--- a/app/src/main/res/layout/item_tv.xml
+++ b/app/src/main/res/layout/item_tv.xml
@@ -6,7 +6,6 @@
     app:cardCornerRadius="15dp"
     android:layout_marginTop="20dp"
     android:layout_gravity="center_horizontal"
-
     >
 
     <LinearLayout
@@ -20,11 +19,62 @@
             android:layout_height="160dp"
             />
 
-        <TextView
-            android:id="@+id/item_tv_title"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Title" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="15dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/item_tv_title"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:text="fdsafdsfasdsfdsdsafdsafdsafd"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:maxLines="1"
+                    android:ellipsize="end" />
+
+
+                <ImageView
+                    android:id="@+id/star"
+                    android:src="@drawable/non_color_star"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:clipToOutline="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+            <TextView
+                android:id="@+id/item_tv_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="release_date"
+                android:textSize="15dp"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="STREAM ____________"
+                android:textSize="15dp"
+                android:textColor="@color/black"
+                />
+
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
