--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    >
+    tools:context=".MainActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
@@ -20,11 +21,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@drawable/gradient_actionbar"
             app:titleTextColor="@color/white"
-            android:gravity="center"
             app:layout_constraintTop_toTopOf="parent"
         />
-
-
 
         <fragment
             android:id="@+id/nav_host_fragment_activity_main"
@@ -43,7 +41,7 @@
             android:id="@+id/nav_view"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:paddingBottom="6dp"
+            android:paddingBottom="7dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:itemTextAppearanceActive="@style/BottomNavigationTextStyle"
             app:itemTextAppearanceInactive="@style/BottomNavigationTextStyle"
@@ -53,7 +51,9 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+<!--    측면에서 나오는 레이아웃-->
     <LinearLayout
+        android:id="@+id/login_layout"
         android:background="@drawable/gradient_mypage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
