프로필 수정 코드, 배우 해야함

--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -39,7 +39,7 @@
                     android:ellipsize="end" />
 
                 <ImageView
-                    android:id="@+id/starImageView"
+                    android:id="@+id/moviestarImageView"
                     android:src="@drawable/non_color_star"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
@@ -62,13 +62,35 @@
                 android:textSize="15dp"
                 />
 
-            <TextView
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="10dp"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="STREAM"
+                    android:textColor="@color/black"/>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="15dp"
+                    android:paddingLeft="5dp"
+                    android:src="@drawable/line"
+                    />
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/movie_watch_provider"
+                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="STREAM ____________"
-                android:textSize="15dp"
-                android:textColor="@color/black"
+                android:nestedScrollingEnabled="true"
                 />
 
 
