--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,106 +52,254 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 <!--    측면에서 나오는 레이아웃-->
+
     <LinearLayout
-        android:id="@+id/login_layout"
-        android:background="@drawable/gradient_mypage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_gravity="start">
+        android:visibility="visible"
+        android:layout_gravity="start"
+        >
 
-        <TextView
-            android:id="@+id/appName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textSize="40dp"
-            android:textColor="@color/white"
-            android:gravity="center"
-
-            />
-
+        <!--    로그인 화면-->
         <LinearLayout
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
+            android:id="@+id/login_layout"
+            android:visibility="visible"
+            android:background="@drawable/gradient_mypage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical"
+            android:gravity="center"
             >
+
+            <TextView
+                android:id="@+id/appName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textSize="40dp"
+                android:textColor="@color/white"
+                android:gravity="center"
+
+                />
+
+            <LinearLayout
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="아이디"
+                    android:textSize="30dp"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="50dp"
+
+                    />
+                <EditText
+                    android:layout_width="200dp"
+                    android:layout_height="40dp"
+                    android:background="@color/white"
+                    android:gravity="center"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="비밀번호"
+                    android:textSize="30dp"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="10dp"
+
+                    />
+                <EditText
+                    android:id="@+id/password"
+                    android:inputType="textPassword"
+                    android:layout_width="200dp"
+                    android:layout_height="40dp"
+                    android:background="@color/white"
+                    android:gravity="center"
+                    />
+                <Button
+                    android:id="@+id/login_summit_button"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="로그인"
+                    android:textSize="20dp"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/corner_button"
+
+                    />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginTop="100dp"
+                >
+                <TextView
+                    android:id="@+id/passwordFind"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="비번찾기"
+                    android:textColor="@color/white"
+                    android:textSize="20dp"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="|"
+                    android:layout_marginHorizontal="10dp"
+                    android:textColor="#36FFFFFF"
+                    android:textSize="20dp"
+                    />
+                <TextView
+                    android:id="@+id/joinButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="회원가입"
+                    android:textColor="@color/white"
+                    android:textSize="20dp"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+
+
+    <!--    프로필 화면-->
+        <LinearLayout
+            android:id="@+id/mypage_layout"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/gradient_mypage"
+            android:orientation="vertical"
+            android:gravity="center"
+            >
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="아이디"
-                android:textSize="30dp"
+                android:text="@string/app_name"
+                android:textSize="40dp"
                 android:textColor="@color/white"
-                android:layout_marginTop="50dp"
-
-                />
-            <EditText
-                android:layout_width="200dp"
-                android:layout_height="40dp"
-                android:background="@color/white"
                 android:gravity="center"
                 />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="비밀번호"
-                android:textSize="30dp"
+            <ImageView
+                android:id="@+id/profileImage"
+                android:layout_width="144dp"
+                android:layout_height="144dp"
+                android:background="@drawable/circle"
+                android:layout_marginTop="20dp"
+                />
+
+
+            <Button
+                android:id="@+id/profileImageButton"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:text="사진선택"
+                android:textSize="20dp"
                 android:textColor="@color/white"
                 android:layout_marginTop="10dp"
-
-                />
-            <EditText
-                android:layout_width="200dp"
-                android:layout_height="40dp"
-                android:background="@color/white"
-                android:gravity="center"
-                />
-            <Button
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="로그인"
-                android:textSize="20dp"
-                android:textColor="@color/white"
-                android:layout_marginTop="20dp"
                 android:background="@drawable/corner_button"
-
+                android:backgroundTint="#7A33B6"
                 />
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_marginTop="100dp"
-            >
-            <TextView
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="비번찾기"
-                android:textColor="@color/white"
-                android:textSize="20dp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="|"
-                android:layout_marginHorizontal="10dp"
-                android:textColor="#36FFFFFF"
-                android:textSize="20dp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="회원가입"
-                android:textColor="@color/white"
-                android:textSize="20dp"
-                />
+                android:gravity="center"
+                android:orientation="vertical"
+                >
+
+                <LinearLayout
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    >
+                    <TextView
+                        android:id="@+id/id_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="이지은"
+                        android:textSize="30dp"
+                        android:textColor="@color/white"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="10dp"
+                        android:text="님의"
+                        android:textSize="30dp"
+                        android:textColor="@color/white"/>
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="좋아요"
+                    android:textSize="30dp"
+                    android:textColor="@color/white"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="영화"
+                    android:textSize="30dp"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="20dp"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TV"
+                    android:textSize="30dp"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="10dp"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="배우"
+                    android:textSize="30dp"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="10dp"
+                    />
+
+
+                <Button
+                    android:id="@+id/editProfileButton"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="프로필 수정"
+                    android:textSize="20dp"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/corner_button"
+                    />
+                <Button
+                    android:id="@+id/logoutButton"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="로그아웃"
+                    android:textSize="20dp"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/corner_button"
+                    android:backgroundTint="#A82424"
+                    />
+
+            </LinearLayout>
 
 
         </LinearLayout>
     </LinearLayout>
+
 </androidx.drawerlayout.widget.DrawerLayout>
 
