--- a/app/src/main/res/layout/activity_useredit.xml
+++ b/app/src/main/res/layout/activity_useredit.xml
@@ -44,21 +44,25 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
+        android:layout_marginTop="10dp"
         >
+
         <TextView
+            android:id="@+id/id_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="아이디"
             android:textSize="30dp"
             android:textColor="@color/white"
-            android:layout_marginTop="20dp"
-
             />
-        <EditText
+
+        <TextView
+            android:id="@+id/id_view"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:background="@color/white"
-            android:gravity="center"
+            android:gravity="start |center_vertical"
+            android:text="아이디 나타나는 곳"
+            android:textSize="20dp"
             />
         <TextView
             android:layout_width="match_parent"
@@ -69,6 +73,8 @@
             android:layout_marginTop="10dp"
             />
         <EditText
+            android:id="@+id/edit_password"
+            android:inputType="textPassword"
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:background="@color/white"
@@ -90,7 +96,7 @@
             />
 
         <Button
-            android:id="@+id/JoinSummitButton"
+            android:id="@+id/EditSummitButton"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="완료"
